--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.97.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,11 +25,11 @@
     "extends": [
       "react-app",
       "react-app/jest",
-	  "prettier"
+      "prettier"
     ],
-	"plugins": [
-		"prettier"
-	]
+    "plugins": [
+      "prettier"
+    ]
   },
   "browserslist": {
     "production": [
